--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -1,1 +1,8 @@
-<h1>hello world</h1>
+<h1>Post Blog</h1>
+
+<ul>
+{% for post in object_list%}
+<li>{{ post.title }} - {{ post.autor }}<br/>
+{{ post.body }}</li>
+{% endfor%}
+</ul>
