add style with bootstrap

--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -9,7 +9,7 @@
 {{ post.body }}
 
 <br/><br/>
-<a href="{% url 'index' %}">Back</a>
+<a href="{% url 'index' %}"class="btn btn-secondary">Back</a>
 
 
 {% endblock %}
