--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -11,7 +11,28 @@
     <title>Hello, world!</title>
   </head>
   <body>
-      
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'index' %}">Hello World Blog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Travel tips</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">blogging Post</a>
+            </li>
+          </ul>
+          
+        </div>
+      </div>
+    </nav>  
   <br/>
     <div class="container">
         {% block content %}
