--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -26,7 +26,7 @@
               <a class="nav-link" href="#">Travel tips</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">blogging Post</a>
+              <a class="nav-link" href="{% url 'post' %}">blogging with me</a>
             </li>
           </ul>
           
