--- a/world/templates/post_update.html
+++ b/world/templates/post_update.html
@@ -1,15 +1,16 @@
 {% extends 'base.html' %}
-{% block title%} Create your Blog Post{% endblock%}
+{% block title%} Edit Blog Post{% endblock%}
 
 {% block content %}
 
-<h1> Blogging with me</h1>
+<h1> Update Post</h1>
 <br/><br/>
+
 <div class="mb-3">
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button class="btn btn-secondary">Post</button>
+        <button class="btn btn-secondary">Update</button>
     </div>
 
 {% endblock %}
