create the delete button and add order descending for my post

--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -3,8 +3,9 @@
 {% block content %}
 
 <h1>{{ post.title }}</h1>
-<small>By: {{ post.author.first_name }} {{ post.author.last_name}} </br>
-<a href="{% url 'update_post' post.pk %}"> (Edit) </a></small><br/>
+<small>By: {{ post.author.first_name }} {{ post.author.last_name}}
+<a href="{% url 'update_post' post.pk %}"> (Edit) </a>
+<a href="{% url 'post_delete' post.pk %}">(Delete) </small></a><br/>
 <hr>
 <br/>
 {{ post.body }}
