create new app for sign up and register form

--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -26,8 +26,12 @@
               <a class="nav-link" href="#">Travel tips</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'post' %}">blogging with me</a>
+              <a class="nav-link" href="{% url 'post' %}">Post your message</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'register' %}">Register Now</a>
+            </li>
+            
           </ul>
           
         </div>
