--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -31,6 +31,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'register' %}">Register Now</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Sign in</a>
+            </li>
             
           </ul>
           
