--- a/world/templates/post_update.html
+++ b/world/templates/post_update.html
@@ -3,14 +3,21 @@
 
 {% block content %}
 
-<h1> Update Post</h1>
-<br/><br/>
+{% if user.is_authenticated %}
+    <h1> Update Post</h1>
+    <br/><br/>
 
-<div class="mb-3">
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-secondary">Update</button>
+    <div class="mb-3">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="btn btn-secondary">Update</button>
     </div>
+
+
+{% else %}
+    Please register now or Login
+    
+{% endif %}
 
 {% endblock %}
