--- a/world/templates/category.html
+++ b/world/templates/category.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
-{% block title%} Create your Blog Post{% endblock%}
+{% block title%} Create a new Category{% endblock%}
 
 {% block content %}
 
 {% if user.is_authenticated %}
-        <h1> Blogging with me</h1>
+        <h1> Add Category</h1>
         <br/><br/>
         <div class="mb-3">
             <form method="POST">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button class="btn btn-secondary">Post</button>
+                <button class="btn btn-secondary">Add Category</button>
        </div>
 {% else %}
        Please register now or Login
