--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -6,14 +6,17 @@
 <small>By: 
         {{ post.author.first_name }} 
         {{ post.author.last_name}} -
-        {{ post.publish_date }} -
+        {{ post.publish_date }}
+
+        {% if user.is_authenticated %}
         <a href="{% url 'update_post' post.pk %}"> (Edit)
         </a>
         <a href="{% url 'post_delete' post.pk %}">(Delete)</a>
+        {% endif %}
 </small><br/>
 <hr>
 <br/>
-{{ post.body }}
+{{ post.body|linebreaks }}
 
 <br/><br/>
 <a href="{% url 'index' %}"class="btn btn-secondary">Back</a>
