--- a/world/templates/post_delete.html
+++ b/world/templates/post_delete.html
@@ -3,15 +3,19 @@
 
 {% block content %}
 
-<h1> Delete Post</h1>
-<br/><br/>
-<h3>Delete: {{ post.title }} </h3>
+{% if user.is_authenticated %}
+        <h1> Delete Post</h1>
+        <br/><br/>
+        <h3>Delete: {{ post.title }} </h3>
 
-<div class="mb-3">
-    <form method="POST">
-        {% csrf_token %}
-        <strong>Are you sure?</strong><br/>
-        <button class="btn btn-secondary">Delete Post</button>
-    </div>
+        <div class="mb-3">
+            <form method="POST">
+                {% csrf_token %}
+                <strong>Are you sure?</strong><br/>
+                <button class="btn btn-secondary">Delete Post</button>
+        </div>
+{% else %}
+Please register now or Login
 
+{% endif %}
 {% endblock %}
