fix issue with create category page

--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -32,7 +32,7 @@
                 <a class="nav-link" href="{% url 'post' %}">Post your message</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'category' %}">Create New Category</a>
+                <a class="nav-link" href="{% url 'create_category' %}">Create New Category</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}">Logout</a>
