--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -26,7 +26,22 @@
               <a class="nav-link" href="#">Travel tips</a>
             </li>
             
-            
+            <!---Category Menu Code-->
+            {% if caty_menu %}
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Categories
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+
+                {% for item in caty_menu %}
+                <a class="dropdown-item" href="{% url 'category' item|slugify %}">
+                {{ item }}</a>
+                {% endfor %}
+
+              </ul>
+            </li>
+            {% endif %}
             {% if user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'post' %}">Post your message</a>
