--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -9,7 +9,7 @@
     <li><a href="{% url 'details-article' post.pk %}">
         {{ post.title }} </a>
         
-        -<a href="{% url 'category' post.category %}">{{ post.category }}</a>
+        -<a href="{% url 'category' post.category|slugify %}">{{ post.category }}</a>
         -{{ post.author.first_name }} {{ post.author.last_name }}-{{ post.publish_date }}
 
         {% if user.is_authenticated %}
@@ -22,5 +22,6 @@
         <br/>
 {% endfor%}
 </ul>
+
 
 {% endblock %}
