create user permission function

--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -9,9 +9,11 @@
         {{ post.publish_date }}
 
         {% if user.is_authenticated %}
+        {% if user.id == post.author.id %}
         <a href="{% url 'update_post' post.pk %}"> (Edit)
         </a>
         <a href="{% url 'post_delete' post.pk %}">(Delete)</a>
+                {% endif %}
         {% endif %}
 </small><br/>
 <hr>
