--- a/world/templates/post_update.html
+++ b/world/templates/post_update.html
@@ -4,6 +4,8 @@
 {% block content %}
 
 {% if user.is_authenticated %}
+{% if user.id == post.author.id %}
+
     <h1> Update Post</h1>
     <br/><br/>
 
@@ -13,7 +15,9 @@
             {{ form.as_p }}
             <button class="btn btn-secondary">Update</button>
     </div>
-
+    {% else %}
+       No user access 
+    {% endif %}
 
 {% else %}
     Please register now or Login
