--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -13,9 +13,11 @@
         -{{ post.author.first_name }} {{ post.author.last_name }}-{{ post.publish_date }}
 
         {% if user.is_authenticated %}
-        <small><a href="{% url 'update_post' post.pk %}">(Edit) </small></a>
+            {% if user.id == post.author.id %}
+                <small><a href="{% url 'update_post' post.pk %}">(Edit) </small></a>
 
-        <small><a href="{% url 'post_delete' post.pk %}">(Delete)</a>
+                <small><a href="{% url 'post_delete' post.pk %}">(Delete)</a>
+            {% endif %}
         {% endif %}
         </small><br/>
         {{ post.body|slice:":150"|linebreaks  }}</li>
