--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -13,6 +13,7 @@
         -{{ post.author.first_name }} {{ post.author.last_name }}-{{ post.publish_date }}
 
         {% if user.is_authenticated %}
+        <!--Function to give access to the correct user -->
             {% if user.id == post.author.id %}
                 <small><a href="{% url 'update_post' post.pk %}">(Edit) </small></a>
 
