--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -31,7 +31,20 @@
 <form action="{% url 'post_like' post.pk %}"
 method="POST">
         {% csrf_token %}
-        <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-primary btn-sm">Like</button>
+
+    {% if user.is_authenticated %}
+        {% if liked %}
+                <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-primary btn-sm">Unlike</button>
+        {% else %}
+                <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-danger btn-sm">Like</button>
+
+        {% endif %}
+    {%else %}
+        <small><a href="{% url 'login' %}">Login to Like</a></small>
+
+    {% endif %}
+
         -{{ likes_total }} likes
+</form>
 
 {% endblock %}
