--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -34,9 +34,9 @@ method="POST">
 
     {% if user.is_authenticated %}
         {% if liked %}
-                <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-primary btn-sm">Unlike</button>
+                <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-primary btn-sm">Like</button>
         {% else %}
-                <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-danger btn-sm">Like</button>
+                <button type="submit", name="post_id", value="{{post.id}}", class="btn btn-danger btn-sm">Unlike</button>
 
         {% endif %}
     {%else %}
