--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -18,7 +18,7 @@
 </small><br/>
 <hr>
 <br/>
-{{ post.body|linebreaks }}
+{{ post.body|safe }}
 
 <br/><br/>
 <a href="{% url 'index' %}"class="btn btn-secondary">Back</a>
