--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -49,6 +49,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'create_category' %}">Create New Category</a>
               </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'edit_profile' %}">Edit Profile</a>
+            </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'logout' %}">Logout</a>
               </li>
