--- a/world/templates/post.html
+++ b/world/templates/post.html
@@ -7,7 +7,7 @@
         <h1> Blogging with me</h1>
         <br/><br/>
         <div class="mb-3">
-            <form method="POST">
+              <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form.media }}
                 {{ form.as_p }}
