create function to hold picture from profile and link to social media

--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -22,7 +22,7 @@
 {% if post.header_img %}
         <img src="{{ post.header_img.url }}">
 {% endif %}
-<hr>
+
 <br/><br/>
 {{ post.body|safe }}
 <a href="{% url 'index' %}"class="btn btn-secondary">Back</a>
@@ -50,5 +50,35 @@ method="POST">
 
         -{{ likes_total }} likes
 </form>
+
+<br><br/>
+
+
+<div class="card" style="width: 18rem;">
+        <img src="{{post.author.profile.profile_picture.url}}" alt="profile pic">
+        <div class="card-body">
+                <h5 class="card-title">
+                        {{ post.author.first_name }} {{ post.author.last_name}}
+                </h5>
+<p class="small text-muted">
+        {%if post.author.profile.facebook_url %}
+                <a href="{{post.author.profile.facebook_url}}"> Facebook</a> |
+                {% endif %}
+
+        {%if post.author.profile.instagram_url %}
+                <a href="{{post.author.profile.instagram_url}}"> Instagram</a> | 
+                {% endif %}
+
+        {%if post.author.profile.twitter_url %}
+                <a href="{{post.author.profile.twitter_url}}">Twitter</a> |
+                {% endif %}
+
+        {%if post.author.profile.website_url %}
+                <a href="{{post.author.profile.website_url}}">Website</a> |
+                {% endif %}
+</p>      
+                <p class="card-text">{{post.author.profile.bio}}</p>
+                </div>
+              </div>
 
 {% endblock %}
