create profile page for registred user

--- a/world/templates/details_article.html
+++ b/world/templates/details_article.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block title%} {{ post.title_tag }}{% endblock%}
 {% block content %}
 
@@ -55,12 +56,17 @@ method="POST">
 
 
 <div class="card" style="width: 18rem;">
+{% if post.author.profile.profile_picture %}
         <img src="{{post.author.profile.profile_picture.url}}" alt="profile pic">
+{% else %}
+        <img src="{% static '/blogtravel/images/default-profile.jpg' %}" alt="profile pic">
+{% endif %}
         <div class="card-body">
                 <h5 class="card-title">
                         {{ post.author.first_name }} {{ post.author.last_name}}
                 </h5>
 <p class="small text-muted">
+        <a href="{% url 'show_profile_page' post.author.profile.id %}">  Profile  </a>
         {%if post.author.profile.facebook_url %}
                 <a href="{{post.author.profile.facebook_url}}"> Facebook</a> |
                 {% endif %}
@@ -72,7 +78,7 @@ method="POST">
         {%if post.author.profile.twitter_url %}
                 <a href="{{post.author.profile.twitter_url}}">Twitter</a> |
                 {% endif %}
-
+                    
         {%if post.author.profile.website_url %}
                 <a href="{{post.author.profile.website_url}}">Website</a> |
                 {% endif %}
