--- a/members_signup/templates/registration/profile_user.html
+++ b/members_signup/templates/registration/profile_user.html
@@ -1,10 +1,45 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
 
 <h1>User Profile</h1>
 
-{{ user_page }}
+<div class="card" style="width: 18rem;">
 
-
-{% endblock %}
+    {% if user_page.profile.profile_picture %}
+            <img src="{{user_page.profile_picture.url}}" alt="profile pic">
+    {% else %}
+            <img src="{% static '/blogtravel/images/default-profile.jpg' %}" alt="profile pic">
+    {% endif %}
+            <div class="card-body">
+                    <h5 class="card-title">
+                            {{ user_page.first_name }} {{ user_page.last_name}}
+                    </h5>
+    <p class="small text-muted">
+    
+            {% if user_page.profile %}
+                <a href="{% url 'show_profile_page' user_page.profile.id %}">Profile</a> |
+            {% endif %}
+            
+            {%if user_page.facebook_url %}
+                    <a href="{{user_page.facebook_url}}"> Facebook</a> |
+            {% endif %}
+    
+            {%if user_page.instagram_url %}
+                    <a href="{{user_page.instagram_url}}"> Instagram</a> | 
+            {% endif %}
+    
+            {%if user_page.twitter_url %}
+                    <a href="{{user_page.twitter_url}}">Twitter</a> |
+            {% endif %}
+                        
+            {%if user_page.website_url %}
+                    <a href="{{user_page.website_url}}">Website</a> |
+            {% endif %}
+    </p>      
+                    <p class="card-text">{{user_page.profile.bio}}</p>
+            </div>
+    </div>
+    
+    {% endblock %}
+    
