--- a/members_signup/templates/registration/profile_user.html
+++ b/members_signup/templates/registration/profile_user.html
@@ -6,20 +6,16 @@
 
 <div class="card" style="width: 18rem;">
 
-    {% if user_page.profile.profile_picture %}
+    {% if user_page.profile_picture %}
             <img src="{{user_page.profile_picture.url}}" alt="profile pic">
     {% else %}
             <img src="{% static '/blogtravel/images/default-profile.jpg' %}" alt="profile pic">
     {% endif %}
             <div class="card-body">
                     <h5 class="card-title">
-                            {{ user_page.first_name }} {{ user_page.last_name}}
+                            {{ user_page.user.first_name }} {{ user_page.user.last_name}}
                     </h5>
     <p class="small text-muted">
-    
-            {% if user_page.profile %}
-                <a href="{% url 'show_profile_page' user_page.profile.id %}">Profile</a> |
-            {% endif %}
             
             {%if user_page.facebook_url %}
                     <a href="{{user_page.facebook_url}}"> Facebook</a> |
@@ -37,7 +33,7 @@
                     <a href="{{user_page.website_url}}">Website</a> |
             {% endif %}
     </p>      
-                    <p class="card-text">{{user_page.profile.bio}}</p>
+                    <p class="card-text">{{user_page.bio}}</p>
             </div>
     </div>
     
