--- a/members_signup/templates/registration/edit_profile.html
+++ b/members_signup/templates/registration/edit_profile.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
-{% block title%} Edit Profile{% endblock%}
+{% block title%} Edit Setting{% endblock%}
 
 {% block content %}
 
-<h1> Edit Profile</h1>
+<h1> Edit Account</h1>
 <br/><br/>
 
 {{ user.profile.bio }}
@@ -13,7 +13,7 @@
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button class="btn btn-secondary">Update Profile</button>
+        <button class="btn btn-secondary">Update</button>
     </div>
 
 {% endblock %}
