fix the issue with statment for create profile

--- a/world/templates/base.html
+++ b/world/templates/base.html
@@ -26,20 +26,23 @@
             
             <!---Category Menu Code-->
             {% if caty_menu %}
-            {% if user.profile.user %}
+            
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Profile
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  
+                  {% if user.profile.user %}
                     <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Account Settings</a></li>
                     <li><a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %}">Edit Profile Page</a></li>
                     <li><a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %}">Profile Page</a></li>
-                    <li><a class="dropdown-item" href="{% url 'create_profile_page' %}">Create Bio Page</a></li>
+                    
+                  {%else %}
+                      <li><a class="dropdown-item" href="{% url 'create_profile_page'%}">Create Bio Page</a></li>
+                  {% endif %}
                 </ul>
               </li>
-            {% endif %}
+            
             {% endif %}
             {% if user.is_authenticated %}
               <li class="nav-item">
