--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -4,67 +4,46 @@
 
 {% block content %}
 
-<main>
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Share your Thoughts!</h1>
             <p class="lead text-muted">With Hello World Blog! you can share your moments worldwide...</p>
             <div class="d-grid gap-2 col-6 mx-auto">
-                <a class="btn-primary" href="{% url 'create_category' %}">Create New Category</a>
-                <a class="btn-secondary" href="{% url 'post' %}">Post your message</a>
+                <a href="{% url 'create_category' %}" class="btn-primary" >Create New Category</a>
+                <a href="{% url 'post' %}" class="btn-secondary">Post your message</a>
             </div>
           </div>
         </div>
     </section>
-    <div class="album py-5 bg-light">
-        <div class="container">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="{% static 'img/01img.jpg'%}" class="card-img" alt="...">
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                      <div class="d-flex justify-content-between align-items-center">
-                        
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
+
+ <section class= "w3-container">
+  {% for post in object_list %}
+    <div class="card-deck">
+          <div class="card">
+              <img src="{% static 'img/01img.jpg'%}" class="card-img" alt="...">
+              <div class="card-body">
+                <a href="{% url 'details-article' post.pk %}" class="card-title">
+                  {{ post.title }} </a>
+                  -<a href="{% url 'category' post.category|slugify %}">{{ post.category }}</a>
+                  -{{ post.author.first_name }} {{ post.author.last_name }}-
+                <p class="card-text">{{ post.article_snippet }}</p>
+                <p class="card-text"><small class="text-muted">{{ post.publish_date }}</small></p>
                 
-        </div>
-    </div>
-</main>
+{% if user.is_authenticated %}
+                <!--Function to give access to the correct user -->
+      {% if user.id == post.author.id %}
+                  <small><a href="{% url 'update_post' post.pk %}">(Edit) </small></a>
 
+                  <small><a href="{% url 'post_delete' post.pk %}">(Delete)</a></small>
+      {% endif %}
+{% endif %}
+              </div>
+          </div>
+      </div>
+</div>
+{% endfor %}
 
-
-<ul>
-    {% for post in object_list %}
-    <li><a href="{% url 'details-article' post.pk %}">
-        {{ post.title }} </a>
-        
-        -<a href="{% url 'category' post.category|slugify %}">{{ post.category }}</a>
-        -{{ post.author.first_name }} {{ post.author.last_name }}-{{ post.publish_date }}
-
-        {% if user.is_authenticated %}
-        <!--Function to give access to the correct user -->
-            {% if user.id == post.author.id %}
-                <small><a href="{% url 'update_post' post.pk %}">(Edit) </small></a>
-
-                <small><a href="{% url 'post_delete' post.pk %}">(Delete)</a>
-            {% endif %}
-        {% endif %}
-        </small><br/>
-        {{ post.article_snippet }}
-        
-        <br/>
-{% endfor%}
-</ul>
 
 
 {% endblock %}
