create css file and style home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,8 +37,9 @@ body{
     margin:0 auto;
     max-width: 1000px;
     display:grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
     gap:20px;
+    font-family: sans-serif;
 }
 
 .card{
@@ -58,16 +59,18 @@ body{
 
 }
 
-.card-text{
+.card-info{
     padding: 15px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    font-size: 0.8em;
 }
 
-a{
+.edit_ops{
     text-decoration: none;
 }
 
-a.hover{
+.edit_ops.hover{
     text-decoration: underline;
 }
