--- a/world/templates/index.html
+++ b/world/templates/index.html
@@ -25,22 +25,21 @@
         <img src="{% static 'img/01img.jpg'%}" class="card-img" alt="...">
           <div class="card-body">
               <h3 class="title-post"><a href="{% url 'details-article' post.pk %}" class="card-title">{{ post.title }}</a><h3>
-              <br>
+                <br>
                <p class="card-text">{{ post.article_snippet }}</p>
                <p class="card-text"><small class="text-muted">{{ post.publish_date }}</small></p>
-           </div>
+          </div>
             <div class="card-info">
-                <div>
-                    <i class="material-icons">recommend</i>310 amount likes
-                </div>
                 {% if user.is_authenticated %}
                   <div>
+
                     {% if user.id == post.author.id %}
                       <small><a href="{% url 'update_post' post.pk %}" class="edit_opts">Edit</a></small>
 
                       <small><a href="{% url 'post_delete' post.pk %}" class="edit_ops">Delete</a></small>
                     {% endif %}
-                        <a href="#" class="card_link">View Article</a>
+                        <a href="{% url 'details-article' post.pk %}" class="card_link">View Article</a>
+                      
                   </div>
                 {% endif %}
 
